--- a/src/templates/catstat-view.html
+++ b/src/templates/catstat-view.html
@@ -3,7 +3,7 @@
   <div class='edit-mode-label'>
     <i aria-hidden='true' class='fas fa-folder mr-1'></i>{{ 'Category'|trans }}
   </div>
-  <span style='--bg: #{{ Entity.entityData.category_color|default('bdbdbd') }}' data-target='category' class='category-button malleableCategory color-white hl-hover-gray rounded p-1'>{{ Entity.entityData.category_title|raw|default('Not set'|trans) }}</span>
+  <span style='--bg: #{{ Entity.entityData.category_color|default('bdbdbd') }}' data-target='category' class='catstat-btn category-btn malleableCategory'>{{ Entity.entityData.category_title|raw|default('Not set'|trans) }}</span>
 </div>
 
 {# STATUS #}
@@ -11,5 +11,5 @@
   <div class='edit-mode-label'>
     <i aria-hidden='true' class='fas fa-check-square mr-1'></i>{{ 'Status'|trans }}
   </div>
-  <span data-target='status' class='category-button malleableStatus bg-firstlevel color-medium hl-hover-gray rounded p-1'><i class='fas fa-circle fa-fw' style='color: #{{ Entity.entityData.status_color|default('bdbdbd') }}'></i> {{ Entity.entityData.status_title|raw|default('Not set'|trans) }}</span>
+  <span data-target='status' class='catstat-btn status-btn malleableStatus'><i class='fas fa-circle fa-fw' style='--bg: #{{ Entity.entityData.status_color|default('bdbdbd') }}'></i> {{ Entity.entityData.status_title|raw|default('Not set'|trans) }}</span>
 </div>
