--- a/src/templates/team.html
+++ b/src/templates/team.html
@@ -123,7 +123,7 @@
           <option value=''>{{ 'Select an equipment'|trans }}</option>
           {% for item in itemsArr %}
             {# data-color is used to set the background during initial drag #}
-            <option data-color='{{ item.color }}' style='color:#{{ item.color }}' value='{{ item.id }}'{{ App.Request.query.get('item') == item.id ? ' selected' }}>
+            <option data-color='{{ item.category_color }}' style='color:#{{ item.category_color }}' value='{{ item.id }}'{{ App.Request.query.get('item') == item.id ? ' selected' }}>
             {{ item.category_title|raw }} - {{ item.title|raw }}</option>
           {% endfor %}
         </select>
@@ -136,7 +136,7 @@
           <div class='input-group-prepend'>
             <button class='btn btn-secondary' data-action='remove-param-reload' data-target='item'>X</button>
           </div>
-          <a href='database.php?mode=view&id={{ bookableItemData.id }}' class='list-group-item hl-hover-gray'><span style='--bg: #{{ bookableItemData.color }}' class='category-button rounded p-1 mr-2'>{{ bookableItemData.category_title }}</span>{{ bookableItemData.title|raw }}</a>
+          <a href='database.php?mode=view&id={{ bookableItemData.id }}' class='list-group-item hl-hover-gray'><span style='--bg: #{{ bookableItemData.category_color }}' class='catstat-btn category-btn mr-2'>{{ bookableItemData.category_title }}</span>{{ bookableItemData.title|raw }}</a>
         </div>
       </div>
     {% endif %}
