--- a/src/templates/head.html
+++ b/src/templates/head.html
@@ -77,7 +77,7 @@
         {% set actionPage = (scriptName == 'experiments.php' or scriptName == 'database.php') ? scriptName : 'experiments.php' %}
         <form class='nav-item form-inline ml-auto' method='get' action='{{ actionPage }}'>
           {# the id is for making it easy to find the element when focusing it with the keyboard shortcut #}
-          <input id='quicksearchInput' class='form-control big-search' type='search' name='q' aria-label='Search' size='20' value='{{ App.Request.query.get('q') }}' />
+          <input id='quicksearchInput' class='form-control big-search' type='search' name='q' aria-label='{{ 'Search'|trans }}' size='20' value='{{ App.Request.query.get('q') }}' />
         </form>
 
         {# Notification bell #}
