--- a/src/templates/edit-tags.html
+++ b/src/templates/edit-tags.html
@@ -12,23 +12,25 @@
   </div>
 </div>
 <div class='d-none d-sm-block mb-2 align-items-center mathjax-ignore'>
-  <div class='col-form-label mr-3 edit-mode-label'>{{ 'Suggested tags'|trans }}</div>
-  <div id='tags_div_suggestedtags_{{ Entity.id }}' class='mr-2 d-flex flex-wrap'>
-    {% set filteredTags = [] %}
-    {% for tag in teamTagsArr %}
-      {% set tagFound = false %}
-      {% for attachedTag in attachedTags %}
-        {% if tag.tag == attachedTag.tag %}
-          {% set tagFound = true %}
+  <details open>
+    <summary class='col-form-label mr-3 edit-mode-label'>{{ 'Suggested tags'|trans }}</summary>
+    <div id='tags_div_suggestedtags_{{ Entity.id }}' class='mr-2 d-flex flex-wrap'>
+      {% set filteredTags = [] %}
+      {% for tag in teamTagsArr %}
+        {% set tagFound = false %}
+        {% for attachedTag in attachedTags %}
+          {% if tag.tag == attachedTag.tag %}
+            {% set tagFound = true %}
+          {% endif %}
+        {% endfor %}
+        {% if not tagFound %}
+          {% set filteredTags = filteredTags|merge([tag]) %}
         {% endif %}
       {% endfor %}
-      {% if not tagFound %}
-        {% set filteredTags = filteredTags|merge([tag]) %}
-      {% endif %}
-    {% endfor %}
 
-    {% for tag in filteredTags|slice(0, 30) %}
-      <button class='btn tag margin-1px opacity-8 lh-normal border-0 {{- loop.last ? ' mr-2' }} {{- tag.is_favorite ? ' favorite' }}' data-action='add-suggested-tag' data-tagid='{{ tag.tag_id }}' type='button'>{{ tag.tag|raw }}</button>
-    {%- endfor -%}
-  </div>
+      {% for tag in filteredTags|slice(0, 101) %}
+        <button class='btn tag margin-1px opacity-8 lh-normal border-0 {{- loop.last ? ' mr-2' }} {{- tag.is_favorite ? ' favorite' }}' data-action='add-suggested-tag' data-tagid='{{ tag.tag_id }}' type='button'>{{ tag.tag|raw }}</button>
+      {%- endfor -%}
+    </div>
+  </details>
 </div>
