--- a/src/templates/field-builder-modal.html
+++ b/src/templates/field-builder-modal.html
@@ -140,7 +140,7 @@
         </div>
         <div class='modal-footer'>
           <button type='button' class='btn btn-secondary' data-dismiss='modal'>{{ 'Close'|trans }}</button>
-          <button type='button' class='btn btn-primary' data-action='save-new-field'>{{ 'Save'|trans }}</button>
+          <button type='button' class='btn btn-primary' data-dismiss='modal' data-action='save-new-field'>{{ 'Save'|trans }}</button>
         </div>
       </div>
     </form>
@@ -188,7 +188,7 @@
 
       <div class='modal-footer'>
         <button type='button' class='btn btn-secondary' data-dismiss='modal'>{{ 'Close'|trans }}</button>
-        <button id='applyMetadataLoadBtn' type='button' class='btn btn-primary' disabled data-action='load-metadata-from-textarea'>{{ 'Apply'|trans }}</button>
+        <button id='applyMetadataLoadBtn' type='button' class='btn btn-primary' disabled data-dismiss='modal' data-action='load-metadata-from-textarea'>{{ 'Apply'|trans }}</button>
       </div>
     </div>
   </div>
