--- a/src/templates/uploads.html
+++ b/src/templates/uploads.html
@@ -44,7 +44,7 @@
     </div>
   </div>
 
-  <div class='row mt-2' id='uploadsDiv' data-save-hidden='uploadsDiv'>
+  <div class='row mt-2 mx-0' id='uploadsDiv' data-save-hidden='uploadsDiv'>
     {# ADD NEW FILE #}
     {% if mode == 'edit' %}
       <div class='col-md-4 col-sm-6'>
@@ -105,27 +105,27 @@
                     </button>
                     {% include('upload-replace-form.html') %}
                   {% endif %}
-                {% if not Entity.isReadOnly %}
-                  {# ARCHIVE #}
-                  <button type='button' title='{{ 'Archive/Unarchive'|trans }}' aria-label='{{ 'Archive/Unarchive'|trans }}' class='btn hover-warning p-1 mr-1' data-action='archive-upload' data-uploadid='{{ upload.id }}'>
-                    <i class='fas fa-box-archive'></i>
-                  </button>
-                  {# DESTROY #}
-                  <button type='button' title='{{ 'Delete'|trans }}' aria-label='{{ 'Delete'|trans }}'class='btn hover-danger p-1 mr-1' data-action='destroy-upload' data-uploadid='{{ upload.id }}'>
-                    <i class='fas fa-trash-alt'></i>
-                  </button>
+                  {% if not Entity.isReadOnly %}
+                    {# ARCHIVE #}
+                    <button type='button' title='{{ 'Archive/Unarchive'|trans }}' aria-label='{{ 'Archive/Unarchive'|trans }}' class='btn hover-warning p-1 mr-1' data-action='archive-upload' data-uploadid='{{ upload.id }}'>
+                      <i class='fas fa-box-archive'></i>
+                    </button>
+                    {# DESTROY #}
+                    <button type='button' title='{{ 'Delete'|trans }}' aria-label='{{ 'Delete'|trans }}'class='btn hover-danger p-1 mr-1' data-action='destroy-upload' data-uploadid='{{ upload.id }}'>
+                      <i class='fas fa-trash-alt'></i>
+                    </button>
+                  {% endif %}
                 {% endif %}
-              {% endif %}
               </td>
             </tr>
           {% endfor %}
         </tbody>
       </table>
 
-      {# DEFAULT LAYOUT (1) #}
-      {% else %}
-        {% for upload in Entity.entityData.uploads %}
-          {% set ext = upload.real_name|getExt %}
+    {# DEFAULT LAYOUT (1) #}
+    {% else %}
+      {% for upload in Entity.entityData.uploads %}
+        {% set ext = upload.real_name|getExt %}
         <div class='col-md-4 col-sm-6' id='uploadDiv_{{ upload.id }}'>
           <div class='thumbnail box {{ upload.state == constant('Elabftw\\Enums\\State::Archived').value ? 'bg-light' }}' data-type='{{ Entity.type }}' data-id='{{ Entity.id }}' style='overflow: visible'>
             {% include('upload-dropdown-menu.html') %}
