--- a/src/templates/admin.html
+++ b/src/templates/admin.html
@@ -120,7 +120,8 @@
 
   <div class='pl-3 mt-2'>
     <label for='common_template'>{{ 'Common Experiment Template'|trans }}</label>
-    {% if App.Config.configArr.debug -%}{# set no-unused-disable and text-content because removing or leaving text-content brings up error #}
+    {% if App.Config.configArr.debug -%}
+      {# set no-unused-disable and text-content because removing or leaving text-content brings up error #}
       <!-- [html-validate-disable-block unique-landmark, element-permitted-content, no-deprecated-attr, prefer-native-element, no-unused-disable, text-content: suppress errors from tinymce] -->
     {%- endif %}
     <textarea style='height:400px' class='mceditable' name='common_template' id='common_template'>
