--- a/src/templates/sysconfig.html
+++ b/src/templates/sysconfig.html
@@ -32,7 +32,7 @@
 
 {# show error if the email is not configured #}
 {% if App.Config.configArr.mail_from == 'notconfigured@example.com' %}
-    {{ 'Please finalize install: %slink to documentation%s.'|trans|format("<a href='https://doc.elabftw.net/sysadmin-guide.html#setting-up-email'>", "</a>")|msg('ko') }}
+    {{ 'Email configuration is required. Consult the documentation (%slink%s) for help.'|trans|format("<a href='https://doc.elabftw.net/sysadmin-guide.html#setting-up-email'>", "</a>")|msg('ko') }}
 {% endif %}
 
 <div id='versionNotifZone'></div>
