--- a/src/templates/pdf.html
+++ b/src/templates/pdf.html
@@ -134,6 +134,7 @@
   <table class='noborder' role='presentation'>
     <tr>
       <td class='noborder'>
+        {# use raw here as this is an mpdf special tag and the url needs to be passed unmodified #}
         <barcode code='{{ url|raw }}' type='QR' class='barcode' size='0.8' error='M' />
       </td>
       <td class='noborder'>
