--- a/src/templates/team.html
+++ b/src/templates/team.html
@@ -182,7 +182,7 @@
   {{ 'Members'|trans }}: {{ teamsStats.totusers }} &ndash; {% trans %}Experiment{% plural teamStats.totxp %}Experiments{% endtrans %}: {{ teamsStats.totxp }} ({{ teamsStats.totxpts }} timestamped) &ndash; {{ 'Resources'|trans }}: {{ teamsStats.totdb }}
   </div>
 
-  <h3 class='p-2 pl-3 mb-3 section-title'><i class='fas fa-users'></i> {{ 'Members'|trans }}</h3>
+  <h3 class='p-2 pl-3 mb-3 section-title'>{{ 'Members'|trans }}</h3>
   <table id='teamtable' class='table' aria-describedby='pageTitle' data-table-sort='true'>
     <thead>
       <tr>
@@ -215,13 +215,13 @@
 
 {# TAB 3 TEMPLATE #}
 <div data-tabcontent='3' hidden>
-  <h3 class='p-2 pl-3 section-title'><i class='fas fa-layer-group'></i> {{ 'Experiments Templates'|trans }}</h3>
+  <h3 class='p-2 pl-3 section-title'>{{ 'Experiments Templates'|trans }}</h3>
   <p class='mt-3'>All the experiments templates are now visible at one place: the <a href='/ucp.php?tab=3'>Settings</a>.</p>
 </div>
 
 {# TAB 4 EMAIL #}
 <div data-tabcontent='4' hidden>
-  <h3 class='p-2 pl-3 mb-3 section-title'><i class='fas fa-envelope'></i> {{ 'Send an email to users'|trans }}</h3>
+  <h3 class='p-2 pl-3 mb-3 section-title'>{{ 'Send an email to users'|trans }}</h3>
   <form class='pl-3' method='post' action='app/controllers/TeamController.php' aria-label='{{ 'Mass email form'|trans }}'>
     {{ App.Session.get('csrf')|csrf }}
     <input type='hidden' name='emailUsers' />
@@ -248,7 +248,8 @@
 
 {# TAB 5 PROCUREMENT REQUESTS #}
 <div data-tabcontent='5' hidden>
-  <div class='mb-2'>
+  <h3 class='p-2 pl-3 section-title'>{{ 'Procurement requests'|trans }}</h3>
+  <div class='pl-3 my-2'>
     {% if teamProcurementRequestsArr %}
       {# DOWNLOAD as CSV #}
       <div class='mb-4 d-flex flex-row-reverse'>
