--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -872,6 +872,10 @@ the form-control fails to do that so we do the border ourselves */
     background-color: $firstlevel;
 }
 
+.hl-hover-superlight:hover {
+    background-color: $superlight;
+}
+
 .hl-hover-gray:focus-visible {
     background-color: $firstlevel;
     outline: none;
