--- a/src/templates/link-view-one.html
+++ b/src/templates/link-view-one.html
@@ -1,7 +1,7 @@
 {# required vars:
   link: the link to display
   mode: edit edit-template view etc... #}
-<div class='ml-3 mt-3 col-md-12 countable'>
+<div class='ml-3 mt-3 col-md-12 countable hl-hover-superlight p-1 rounded'>
   {% set randomId = random() %}
   <div class='d-flex mb-1 align-items-center' id='parent_{{ randomId }}'>
     <i class='fas fa-link fa-fw mr-2'></i>
